# summarization-api

./: README.md  pyproject.toml
src/: __init__.py  main.py  mainlayer.py  models.py  summarizer.py
tests/: test_api.py
